# module/product/models/product.ts
@@ -14,6 +14,10 @@
  *           type: string
  *         price:
  *           type: number
+ *         categories:
+ *           type: array
+ *           $ref: '#/components/schemas/Product'
+ *           readOnly: true
  *         createdAt:
  *           type: string
  *           format: date-time
@@ -22,11 +26,13 @@
 
 import { Document, model, Schema } from "mongoose";
 import * as Yup from "yup";
+import Category, { ICategory } from "@module/category/models/category";
 
 export interface IProduct extends Document {
   title: String;
   description?: String;
   price: Number;
+  categories?: String[] | ICategory[];
   createdAt?: Date;
 }
 
@@ -34,12 +40,14 @@ export const schemaCreate = Yup.object<IProduct>().shape({
   title: Yup.string().required(),
   description: Yup.string(),
   price: Yup.number().required(),
+  categories: Yup.array().of(Yup.string()),
 });
 
 const schema = new Schema({
   title: String,
   description: String,
   price: Number,
+  categories: [{ type: Schema.Types.ObjectId, ref: Category }],
   createdAt: { type: Date, default: Date.now },
 });
 
